# speaking_practice

./: .env.example  .gitignore  AGENTS.md  README.md
backend/: .flake8  .pre-commit-config.yaml  LINTING.md  Makefile  pyproject.toml  requirements.txt  verify_refactor.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: history.py  session.py  settings.py
backend/app/core/: audio.py  config.py  exceptions.py  topics.py
backend/app/schemas/: __init__.py  history.py  session.py  settings.py
backend/app/services/: __init__.py  asr_service.py  history_service.py  llm_service.py  session_manager.py  settings_service.py  tts_service.py
backend/scripts/: lint_analysis.py
backend/tests/: test_session_settings_persistence.py  test_settings.py
backend/tests/integration/: test_endpoints.py
backend/tests/unit/: test_asr_service.py  test_history_service.py  test_language_validation.py  test_llm_service.py  test_security.py  test_session_manager.py  test_tts_service.py
doc/: ARCHITECTURE.md  CODE_REVIEW.md  ISSUES.json  ISSUES.md  PRD.md  kokoro_tts_doc.md  parakeet_doc.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AudioRecorder.tsx  Notification.tsx  NotificationContext.tsx
frontend/src/components/__tests__/: Button.test.tsx
frontend/src/features/history/: HistoryView.tsx
frontend/src/features/practice/: PracticeView.tsx  SessionReview.tsx
frontend/src/features/settings/: SettingsView.tsx
frontend/src/types/: index.ts
