[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speaking-practice-backend"
version = "0.1.0"
description = "AI-powered speaking practice application backend"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "openai>=1.35.0",
    "pydub>=0.25.1",
    "kokoro>=0.9.4",
    "soundfile",
    "numpy<2.0; sys_platform != 'darwin'",
    "numpy>=2.2.5; sys_platform == 'darwin'",
    "torch",
    "scipy",
    "typer",
    "parakeet-mlx; sys_platform == 'darwin'",
    "nemo_toolkit[asr]; sys_platform != 'darwin'",
    "cuda-python>=12.3; sys_platform != 'darwin'",
    "hf-transfer>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
dev = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pip>=25.3",
    "pytest-asyncio>=1.3.0",
]
